<resources>
    <string name="dreamland">Dreamland</string>
    <string name="welcome_screen_description">You don\'t have a created character yet, what are you waiting for?</string>
    <string name="create_character">Create Character</string>
    <string name="character_creation_description">Welcome to the character creation, you are about to embark on a great adventure, select your class wisely.</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="ranger">Ranger</string>
    <string name="barbarian">Barbarian</string>
    <string name="barbarian_description">For some, their rage springs from a communion with fierce animal spirits. Others draw from a roiling reservoir of anger at a world full of pain. For every barbarian, rage is a power that fuels not just a battle frenzy but also uncanny reflexes, resilience, and feats of strength.</string>
    <string name="ranger_description">Far from the bustle of cities and towns, past the hedges that shelter the most distant farms from the terrors of the wild, amid the dense-packed trees of trackless forests and across wide and empty plains, rangers keep their unending watch.</string>
    <string name="sorcerer_description">Sorcerers carry a magical birthright conferred upon them by an exotic bloodline, some otherworldly influence, or exposure to unknown cosmic forces. No one chooses sorcery; the power chooses the sorcerer.</string>
    <string name="empty_character_name_error">You must select a name for the character!</string>
    <string name="character_creation_confirmation_message"><![CDATA[You are about to create a Character named <b>%1$s</b>, of the extraordinary class <b>%2$s</b>. <br><br>Should we proceed?]]></string>
    <string name="character_class_attribute_hp"><![CDATA[<b>HP:</b> %1$d]]></string>
    <string name="character_class_attribute_atk"><![CDATA[<b>ATK:</b> %1$d]]></string>
    <string name="character_class_attribute_def"><![CDATA[<b>DEF:</b> %1$d]]></string>
    <string name="start_adventure">Start Adventure!</string>
    <string name="cancel">Cancel</string>
    <string name="character_class">Character Class</string>
    <string name="atk"><![CDATA[<b>Attack:</b> %1$d]]></string>
    <string name="hp">Health</string>
    <string name="def"><![CDATA[<b>Defense:</b> %1$d]]></string>
    <string name="xp">Experience</string>
    <string name="slash_format">%1$s / %2$s</string>
    <string name="hunt">Hunt</string>
    <string name="hunt_description">You can go Hunting once every minute to gain XP and Gold.</string>
    <string name="hunting_available">You can go Hunting now!</string>
    <string name="adventure">Adventure</string>
    <string name="adventure_description">Adventures can be done once every half an hour, gain large amount of XP and Gold</string>
    <string name="adventure_available">You are able to go on an Adventure now!</string>
    <string name="shop">Shop</string>
    <string name="shop_description">Shop for potions and equipment!</string>
    <string name="daily_reward">Daily reward</string>
</resources>
